Handle env in dev, fix scrollbar and ghost save

--- a/src/app.css
+++ b/src/app.css
@@ -122,18 +122,3 @@
     @apply px-4;
   }
 }
-
-::-webkit-scrollbar {
-  width: 16px;
-}
-
-::-webkit-scrollbar-thumb {
-  border-radius: 9999px;
-  border: 4px solid transparent;
-  background-clip: content-box;
-  @apply bg-accent;
-}
-
-::-webkit-scrollbar-corner {
-  display: none;
-}
